@@ -1,3 +1,7 @@
+2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libstetic/WidgetUtils.cs: Fix version comparison logic.
+
 2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libsteticui/ProjectBackend.cs, libsteticui/WidgetEditSession.cs,
